test/compile_errors/err_derive_default_field_without_default.w
//! expect-error: cannot derive Default for type 'UsesNoDefault': field 'value' of type 'NoDefault' does not implement Default

type NoDefault { value: i32 }

@[derive(Default)]
type UsesNoDefault { value: NoDefault }

fn main:
    let _ = UsesNoDefault.default()
